<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="holder"
            type="com.kuky.demo.wan.android.ui.dialog.RegisterDialogFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@null"
            bind:circleImg="@{@drawable/ic_avatar}"
            tools:src="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/repass_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:onClick="@{holder::register}"
            android:text="@string/register_text"
            android:textSize="16sp" />
    </LinearLayout>
</layout>